2007-03-29  dima  <dima.exe@gmail.com>

	* rails-test.el (rails-test:print-result): don't scroll on top

	* rails-navigation.el (rails-nav:goto-functional-tests): created
	(rails-nav:goto-unit-tests): created

	* rails-core.el (rails-core:functional-tests): created
	(rails-core:unit-tests): created

	* rails-cmd-proxy.el: updated

	* rails-scripts.el (rails-script:output-mode): updated

	* rails.el (indent-or-complete): updated

	* rails-test.el (rails-test:run): cleanup

	* rails-rake.el (rails-rake:list-of-tasks-without-tests): created
	(rails-rake:list-of-tasks): renamed from rails-rake:tasks-list

	* rails-ui.el: created seperate menu group for tests

	* rails-test.el: created, Added tests integration with the compile library

	* rails-scripts.el: refactored

	* rails-rake.el: refactored

	* rails-lib.el (rails-completing-read): created

2007-03-28  dima  <dima.exe@gmail.com>

	* rails-rake.el (rails-rake:task): removed rails-rake:output-mode

	* rails.el: added forward declaration of try-complete-abbrev,
	index-or-complete and setup variable
	hippie-expand-try-function-alist

	* rails-snippets.el (rails-snippets:list): updated

	* rails-core.el (rails-core:menu-position): fixed error at `window-live-p'

	* rails-ui.el (rails-minor-mode-menu-bar-map): added menu item for "test current method"

	* rails-ws.el (rails-ws:start): added missing parameter the
	rails-ws:default-server-type to startup command

	* rails-scripts.el (rails-script:toggle-output-window): created

	* rails-ws.el (rails-ws:start): fixed bug [#9619], incorect setup of default directory

	* rails-snippets.el (rails-snippets-menu-list): removed
	(rails-snippets:create-keymap, rails-snippets:create-lambda)
	(rails-snippets:list): created

	* rails-lib.el (create-snippets-and-menumap-from-dsl): removed

2007-03-27  dima  <dima.exe@gmail.com>

	* rails-snippets.el (rails-snippets-menu-list): updated snippets,
	add the "assert_template" snippet

	* rails-rake.el (rails-rake:test-current): created